<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button23"

        android:layout_width="60dp"
        android:layout_height="60dp"

        android:text="@string/buttDivi"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/button26" />

    <Button
        android:id="@+id/button27"

        android:layout_width="60dp"
        android:layout_height="60dp"

        android:text="@string/buttSuma"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toStartOf="@+id/button26"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <Button
        android:id="@+id/button31"

        android:layout_width="60dp"
        android:layout_height="60dp"

        android:layout_marginTop="352dp"
        android:text="."
        app:layout_constraintEnd_toStartOf="@+id/button29"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button26"

        android:layout_width="60dp"
        android:layout_height="60dp"

        android:text="@string/buttResta"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button27"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <Button
        android:id="@+id/button25"

        android:layout_width="60dp"
        android:layout_height="60dp"

        android:text="@string/buttMulti"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/button7"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="@string/butt7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button29" />

    <Button
        android:id="@+id/button6"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="@string/butt6"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button5"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="@string/butt5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button3"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="@string/butt3"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button4"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button2"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="@string/butt2"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button8"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="@string/butt8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button29" />

    <Button
        android:id="@+id/button9"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="@string/butt9"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button31" />

    <Button
        android:id="@+id/button1"

        android:layout_width="175px"
        android:layout_height="175px"

        android:text="@string/butt1"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button20"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/buttIgual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button28"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="255dp"
        android:layout_height="36dp"
        android:text="Calculadora"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="326dp"
        android:layout_height="215dp"
        android:layout_marginTop="88dp"
        android:text="@string/txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="222dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/butt0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button28"
        android:layout_width="127dp"
        android:layout_height="60dp"
        android:layout_marginTop="352dp"
        android:text="AC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button29"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button29"
        android:layout_width="138dp"
        android:layout_height="58dp"
        android:layout_marginTop="352dp"
        android:text="DEL"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>